packages/rust/holy/tests/fail/06-sanitize-type-mismatch.rs
use holy::Sanitize;

#[derive(Sanitize)]
pub struct Bad {
	#[holy(sanitize = "trim")]
	pub count: u32,
}

fn main() {}
